# cplusplus-memery-layout

./: CMakeLists.txt  README.md
test/: test_class_byte_align.cpp  test_stack_byte_align.cpp  test_struct_byte_align.cpp
